Fixed learn more cutoff

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -372,7 +372,7 @@ p, li {
 		}
 
 		&.open {
-			max-height: 800px;
+			max-height: 1200px;
 		}
 	}
 }
